# matchingwithvcmap

./: .gitignore  README.md  pvxmatching.sln
pvxmatching/: .gitignore  CMakeLists.txt  main.cpp  pvxmatching  pvxmatching.cbp  pvxmatching.vcxproj  pvxmatching.vcxproj.filters
pvxmatching.perf/: .gitignore  CMakeLists.txt  performance.cpp
pvxmatching.perf/scripts/: fvckmp.sh  pvckmp.sh
pvxmatching.vctest/: fvc_convolution.cpp  fvc_kmpbased.cpp  pvc_convolution.cpp  pvc_kmpbased.cpp  pvxmatching.vctest.vcxproj  pvxmatching.vctest.vcxproj.filters  stdafx.cpp
pvxmatching/fvc/: convolutionbased.cpp  convolutionbased.hpp  kjgraph.cpp  kjgraph.hpp  kmpbased.cpp  kmpbased.hpp  kshiftingcondition.cpp  kshiftingcondition.hpp
pvxmatching/naive/: fvcmatching.hpp  pvcmatching.hpp
pvxmatching/pvc/: convolutionbased.cpp  convolutionbased.hpp  kjgraph.cpp  kjgraph.hpp  kmpbased.cpp  kmpbased.hpp  kshiftingcondition.cpp  kshiftingcondition.hpp
pvxmatching/utils/: alphabet.hpp  bitop.hpp  convolution_base.hpp  fft_convolution.cpp  fft_convolution.hpp  injective_map.hpp  naive_convolution.hpp  pair.hpp  rbitmap.cpp  rbitmap.hpp  sbitmap.cpp  sbitmap.hpp  string.hpp  tbitmap.cpp  tbitmap.hpp
