cmake_minimum_required(VERSION 2.8)
PROJECT(pvxperf)

set(CMAKE_BUILD_TYPE RelWithDebInfo)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

SET(SOURCE_FILES performance.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/../pvxmatching/)
FIND_LIBRARY(libpvx NAMES libpvxmatching.a PATHS ${CMAKE_SOURCE_DIR}/../pvxmatching/)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${libpvx})
